--- a/docker-in-docker/requirements.txt
+++ b/docker-in-docker/requirements.txt
@@ -1,14 +1,17 @@
 anyio==3.7.0
+certifi==2023.5.7
+charset-normalizer==3.1.0
 click==8.1.3
-dnspython==2.3.0
+docker==6.1.3
 fastapi==0.96.0
 h11==0.14.0
 idna==3.4
-motor==3.1.2
+packaging==23.1
 pydantic==1.10.9
-pymongo==4.3.3
-python-multipart==0.0.6
+requests==2.31.0
 sniffio==1.3.0
 starlette==0.27.0
 typing_extensions==4.6.3
+urllib3==2.0.3
 uvicorn==0.22.0
+websocket-client==1.5.2
