--- a/k8s/Chart.yaml
+++ b/k8s/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: react-gorm-postgres-example
+name: docker-in-browser
 description: A Helm chart for Kubernetes
 type: application
 version: 0.1.0
