--- a/k8s/templates/postgres1.yaml
+++ b/k8s/templates/postgres1.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: pvc-10gb
+  name: pvc-10gb1
 spec:
   accessModes:
     - ReadWriteOnce
@@ -13,7 +13,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: postgres
+  name: postgres1
 spec:
   ports:
     - name: tcp
@@ -21,37 +21,37 @@ spec:
       protocol: TCP
       targetPort: 5432
   selector:
-    name: postgres
+    name: postgres1
   type: ClusterIP
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: postgres
+  name: postgres1
 spec:
   replicas: 1
   revisionHistoryLimit: 10
   selector:
     matchLabels:
-      name: postgres
+      name: postgres1
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        name: postgres
+        name: postgres1
     spec:
       containers:
         - env:
             - name: POSTGRESQL_USERNAME
-              value: {{ .Values.postgres.envVars.POSTGRES_USER | quote  }}
+              value: {{ .Values.postgres1.envVars.POSTGRES_USER | quote  }}
             - name: POSTGRESQL_PASSWORD
-              value: {{ .Values.postgres.envVars.POSTGRES_PASSWORD | quote  }}
+              value: {{ .Values.postgres1.envVars.POSTGRES_PASSWORD | quote  }}
             - name: POSTGRESQL_DATABASE
-              value: {{ .Values.postgres.envVars.POSTGRES_DB | quote  }}
+              value: {{ .Values.postgres1.envVars.POSTGRES_DB | quote  }}
           image: bitnami/postgresql:13.2.0
           imagePullPolicy: IfNotPresent
-          name: postgres
+          name: postgres1
           ports:
             - containerPort: 5432
               protocol: TCP
@@ -64,15 +64,15 @@ spec:
               memory: 250Mi
           volumeMounts:
             - mountPath: /bitnami/postgresql
-              name: persistent-postgres-database-0
+              name: persistent-postgres-database-1
       dnsPolicy: ClusterFirst
-      hostname: postgres
+      hostname: postgres1
       restartPolicy: Always
       securityContext:
         fsGroup: 1001
         runAsUser: 1001
       terminationGracePeriodSeconds: 30
       volumes:
-        - name: persistent-postgres-database-0
+        - name: persistent-postgres-database-1
           persistentVolumeClaim:
-            claimName: pvc-10gb
+            claimName: pvc-10gb1
