--- a/web-api/Dockerfile
+++ b/web-api/Dockerfile
@@ -1,7 +1,20 @@
-FROM python:3.11-alpine
+# Use a lightweight Python image
+FROM python:3.11-slim-buster
+
+# Set the working directory
+WORKDIR /app
+
+# Copy the requirements file
 COPY requirements.txt .
-RUN pip install -r requirements.txt
-WORKDIR /app/src
-COPY ./app .
-WORKDIR /app/
-CMD uvicorn src.main:app --host 0.0.0.0 --port 8000 --reload
+
+# Install the Python dependencies
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Copy the source code
+COPY src ./src
+
+# Set the working directory to the source code folder
+WORKDIR /app
+
+# Start the application using uvicorn
+CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
