--- a/k8s/templates/docker-api.yaml
+++ b/k8s/templates/docker-api.yaml
@@ -20,6 +20,7 @@ items:
           containers:
             - name: docker-api
               image: {{ .Values.dockerAPI.containers.image }}
+              imagePullPolicy: Always
               env:
                 - name: DOCKER_HOST
                   value: {{ .Values.dockerAPI.envVars.DOCKER_HOST | toJson  }}
@@ -41,3 +42,50 @@ items:
       selector:
         api: docker-api
       type: ClusterIP
+---
+{{/*apiVersion: rbac.authorization.k8s.io/v1*/}}
+{{/*kind: RoleBinding*/}}
+{{/*metadata:*/}}
+{{/*  name: job-pod-creator*/}}
+{{/*  namespace: default*/}}
+{{/*subjects:*/}}
+{{/*- kind: ServiceAccount*/}}
+{{/*  name: default*/}}
+{{/*  namespace: default*/}}
+{{/*roleRef:*/}}
+{{/*  kind: Role*/}}
+{{/*  name: job-pod-creator*/}}
+{{/*  apiGroup: rbac.authorization.k8s.io*/}}
+{{/*---*/}}
+{{/*apiVersion: rbac.authorization.k8s.io/v1*/}}
+{{/*kind: Role*/}}
+{{/*metadata:*/}}
+{{/*  name: job-pod-creator*/}}
+{{/*  namespace: default*/}}
+{{/*rules:*/}}
+{{/*- apiGroups: ["batch"]*/}}
+{{/*  resources: ["jobs, pods"]*/}}
+{{/*  verbs: ["create"]*/}}
+
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: job-pod-creator
+rules:
+- apiGroups: ["batch"]
+  resources: ["jobs", "pods"]
+  verbs: ["create", "delete"]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: job-pod-creator-binding
+subjects:
+- kind: ServiceAccount
+  name: default
+  namespace: default
+roleRef:
+  kind: ClusterRole
+  name: job-pod-creator
+  apiGroup: rbac.authorization.k8s.io
