--- a/.velocity.yml
+++ b/.velocity.yml
@@ -6,5 +6,5 @@ configurations:
     name: "Run With Velocity"
     language: "python"
     build:
-      dockerfile-path: "./docker-in-docker/Dockerfile"
+      dockerfile-path: "./compute/Dockerfile"
       build-context-path: "./"
