--- a/k8s/templates/web-api.yaml
+++ b/k8s/templates/web-api.yaml
@@ -15,6 +15,19 @@ spec:
       labels:
         app: web-api
     spec:
+      initContainers:
+        - name: postgres-ready-check
+          image: postgres:latest
+          command: [ "sh", "-c", "until pg_isready --dbname=${POSTGRES_DB} --host=${POSTGRES_HOST} --port=${POSTGRES_PORT} --username=${POSTGRES_USER}; do echo waiting for Postgres; sleep 2; done;" ]
+          env:
+            - name: POSTGRES_HOST
+              value: {{ .Values.webAPI.envVars.POSTGRES_HOST | quote }}
+            - name: POSTGRES_PORT
+              value: {{ .Values.webAPI.envVars.POSTGRES_PORT | quote }}
+            - name: POSTGRES_DB
+              value: {{ .Values.webAPI.envVars.POSTGRES_DB | quote }}
+            - name: POSTGRES_USER
+              value: {{ .Values.webAPI.envVars.POSTGRES_USER | quote }}
       containers:
         - name: web-api
           image: {{ .Values.webAPI.containers.image | quote }}
