--- a/k8s/templates/web-api.yaml
+++ b/k8s/templates/web-api.yaml
@@ -31,6 +31,7 @@ spec:
       containers:
         - name: web-api
           image: {{ .Values.webAPI.containers.image | quote }}
+          imagePullPolicy: Always
           env:
             - name: POSTGRES_HOST
               value: {{ .Values.webAPI.envVars.POSTGRES_HOST | quote  }}
