--- a/web-api/requirements.txt
+++ b/web-api/requirements.txt
@@ -1,21 +1,21 @@
-bcrypt==4.0.1
-anyio==3.6.2
+aiohttp==3.8.4
+aiosignal==1.3.1
+anyio==3.7.1
+async-timeout==4.0.2
+attrs==23.1.0
+charset-normalizer==3.1.0
 click==8.1.3
-ecdsa==0.18.0
-fastapi==0.95.1
-gunicorn==20.1.0
+fastapi==0.99.1
+frozenlist==1.3.3
 h11==0.14.0
 idna==3.4
-passlib==1.7.4
 psycopg2-binary==2.9.6
-pyasn1==0.5.0
-pydantic==1.10.7
-python-jose==3.3.0
+multidict==6.0.4
+pydantic==1.10.11
 python-multipart==0.0.6
-rsa==4.9
-six==1.16.0
 sniffio==1.3.0
-SQLAlchemy==2.0.13
-starlette==0.26.1
-typing_extensions==4.5.0
+SQLAlchemy==2.0.17
+starlette==0.27.0
+typing_extensions==4.7.1
 uvicorn==0.22.0
+yarl==1.9.2
