--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,11 @@
     "react": "^18.2.0",
     "react-ace": "^10.1.0",
     "react-dom": "^18.2.0",
+    "react-quill": "^2.0.0",
     "react-router": "^6.11.2",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
-  },
-  "devDependencies": {
   },
   "scripts": {
     "start": "react-scripts start",
