--- a/k8s/values.yaml
+++ b/k8s/values.yaml
@@ -26,7 +26,7 @@ usersAPI:
 
 lessonsAPI:
   containers:
-    image: jdvincent/pyprodigy-lessons:0.0.1
+    image: jdvincent/pyprodigy-lessons:latest
   
   envVars:
     POSTGRES_HOST: postgres2
