--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,9 +1,42 @@
-server {
-  listen 80;
-  server_name localhost;
+user  nginx;
+worker_processes auto;
 
-  location / {
-    root /usr/share/nginx/html;
-    try_files $uri $uri/ /index.html;
-  }
+error_log /var/log/nginx/error.log warn;
+pid /var/run/nginx.pid;
+
+events {
+    worker_connections 1024;
+}
+
+http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
+
+    sendfile        on;
+    tcp_nopush      on;
+    tcp_nodelay     on;
+    keepalive_timeout  65;
+
+    # 🛑 Turn off all async I/O
+    aio off;
+
+    server {
+        listen 80;
+        server_name localhost;
+
+        root /usr/share/nginx/html;
+        index index.html;
+
+        location / {
+            try_files $uri $uri/ /index.html;
+            aio off;
+        }
+
+        location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|eot|ttf|svg)$ {
+            expires 6M;
+            access_log off;
+            add_header Cache-Control "public";
+            aio off;
+        }
+    }
 }
