--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^4.3.0",
+    "jwt-decode": "^4.0.0",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-ace": "^10.1.0",
