--- a/k8s/templates/frontend.yaml
+++ b/k8s/templates/frontend.yaml
@@ -45,14 +45,11 @@ kind: Ingress
 metadata:
   name: pyprodigy-ingress
   annotations:
-    cert-manager.io/cluster-issuer: "letsencrypt-prod"
-    kubernetes.io/ingress.class: "nginx"
+  #   cert-manager.io/cluster-issuer: "letsencrypt-prod"
+    # kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/proxy-body-size: 500m
 spec:
-  tls:
-  - hosts:
-    - pyprodigy.dev
-    secretName: pyprodigy-tls
+  ingressClassName: nginx
   rules:
    - http:
       paths:
