--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^4.3.0",
+    "classnames": "^2.5.1",
     "jwt-decode": "^4.0.0",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
@@ -17,6 +18,7 @@
     "react-router": "^6.11.2",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "tailwindcss": "^3.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -42,5 +44,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6"
   }
 }
