--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@auth0/auth0-react": "^2.1.1",
+    "@auth0/auth0-react": "^2.4.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "auth0": "^4.27.0",
     "chart.js": "^4.3.0",
     "classnames": "^2.5.1",
     "jwt-decode": "^4.0.0",
@@ -18,7 +19,6 @@
     "react-router": "^6.11.2",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
-    "tailwindcss": "^3.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -47,6 +47,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6"
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.0"
   }
 }
