--- a/k8s/templates/frontend.yaml
+++ b/k8s/templates/frontend.yaml
@@ -45,14 +45,18 @@ kind: Ingress
 metadata:
   name: pyprodigy-ingress
   annotations:
-  #   cert-manager.io/cluster-issuer: "letsencrypt-prod"
-    # kubernetes.io/ingress.class: "nginx"
+    cert-manager.io/cluster-issuer: letsencrypt
     nginx.ingress.kubernetes.io/proxy-body-size: 500m
 spec:
   ingressClassName: nginx
+  tls:
+  - hosts:
+    - subnode1.xyz
+    secretName: letsencrypt
   rules:
-   - http:
-      paths:
+    - host: subnode1.xyz
+      http:
+        paths:
         - path: /
           pathType: Prefix
           backend:
