--- a/k8s/values.yaml
+++ b/k8s/values.yaml
@@ -26,14 +26,11 @@ usersAPI:
 
 labsAPI:
   containers:
-    image: jdvincent/pyprodigy-lessons:latest
+    image: jdvincent/pyprodigy-lab-thingy-labs:latest
   
   envVars:
-    POSTGRES_HOST: postgres2
-    POSTGRES_PORT: "5432"
-    POSTGRES_DB: lessons_db
-    POSTGRES_USER: postgres
-    POSTGRES_PASSWORD: postgres
+    MONGO_HOST: mongo
+    MONGO_PORT: "27017"
 
 videoAPI:
   containers:
