--- a/labs/requirements.txt
+++ b/labs/requirements.txt
@@ -7,7 +7,8 @@ psycopg2-binary==2.9.6
 pydantic==1.10.9
 python-multipart==0.0.6
 sniffio==1.3.0
-SQLAlchemy==2.0.15
+pymongo==4.13.0
 starlette==0.27.0
 typing_extensions==4.6.3
 uvicorn==0.22.0
+PyJWT==2.8.0
