--- a/k8s/Chart.yaml
+++ b/k8s/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: docker-in-browser
-description: A Helm chart for Kubernetes
+name: lab-thingy
+description: A Helm chart for deploying the Lab Thingy application
 type: application
 version: 0.1.0
 appVersion: "1.16.0"
