--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "PyProdigy",
-  "name": "PyProdigy",
+  "short_name": "Lab Thingy",
+  "name": "Lab Thingy",
   "icons": [
     {
       "src": "favicon.ico",
