--- a/compute/Dockerfile
+++ b/compute/Dockerfile
@@ -1,5 +1,5 @@
 # Use a lightweight Python image with curl and ca-certificates
-FROM python:3.11-slim-buster AS base
+FROM python:3.11-slim-bookworm AS base
 RUN apt-get update && apt-get install -y curl ca-certificates
 
 # Install kubectl
