--- a/users/Dockerfile
+++ b/users/Dockerfile
@@ -1,5 +1,5 @@
 # Use a lightweight Python image
-FROM python:3.11-slim-buster
+FROM python:3.11-slim-bookworm
 
 # Set the working directory
 WORKDIR /app
